Update internal-tools scripts v19.2

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run gulp -- build",
     "test": "npm run gulp -- test",
     "pack": "npm run gulp -- npm.pack",
-    "update-integration-meta": "dx-tools update-meta --output-path=./metadata/NGMetaData.json --version=20_1"
+    "update-integration-meta": "dx-tools update-meta --output-path ./metadata/NGMetaData.json --version 20_1"
   },
   "author": "Developer Express Inc.",
   "license": "MIT",
